--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,12 +35,6 @@ set -g history-limit 10000
 # helps in faster key repetition
 set -sg escape-time 0
 
-# start session number from 1 rather than 0
-set -g base-index 1
-
-# start pane number from 1 similar to windows
-set -g pane-base-index 1
-
 # set color for the active tab
 set-window-option -g window-status-current-style bg=darkgreen
 
@@ -63,8 +57,9 @@ bind-key / copy-mode \; send-key ?
 bind -r "'" select-pane -t .+1 \;  resize-pane -Z
 bind -n F11 select-pane -t .+1 \;  resize-pane -Z
 
-# Switch to the next window
-bind-key -n F10 next-window
+# Switch between windows
+bind p previous-window
+bind n next-window
 
 # Make the current window the first window
 bind T swap-window -t 1
@@ -88,9 +83,6 @@ bind-key @ join-pane -s $.1
 
 # Fix issue with incorrect Vim colors
 set -g default-terminal "xterm-256color"
-
-# Style 
-set -g status-style fg=default,bg=default
 
 # Status bar
 # set-option -g status-position top
