--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,10 +6,12 @@ title = "Terminal"
 font-family = "JetBrainsMono Nerd Font" 
 font-size = 16
 font-feature = -calt
+cursor-color = #f4dbd6
+cursor-text = #0c0c0d
 window-theme = dark
 window-save-state = always
-window-padding-x = 3
-window-padding-y = 3
+window-padding-x = 4
+window-padding-y = 4
 
 copy-on-select = true
 
