improve dap setup
.

.

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,7 +6,7 @@ title = "Terminal"
 font-family = "JetBrainsMono Nerd Font" 
 font-size = 16
 font-feature = -calt
-cursor-color = #f4dbd6
+cursor-color = #ccb6ab
 cursor-text = #0c0c0d
 window-theme = dark
 window-save-state = always
