improve config for bat

--- a/.config/bat/config
+++ b/.config/bat/config
@@ -4,13 +4,17 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
---theme="Nord"
+# https://github.com/catppuccin/bat
+# --theme="Catppuccin Macchiato"
+--theme="Visual Studio Dark+"
+
 
 # Turn off decorations
--p
+# -p
+--style=numbers,changes,header
 
 # Turn off pager
--P
+# -P
 
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
