--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,5 @@
 #theme = dark:Catppuccin Frappe,light:Catppuccin Latte
-theme = Catppuccin macchiato
+theme = Catppuccin Latte
 command = /bin/zsh --login -c tmux attach || tmux
 quit-after-last-window-closed = true
 title = "Terminal"
@@ -29,8 +29,8 @@ keybind = super+right_bracket=text:\x02\x6e
 keybind = super+left_bracket=text:\x02\x6c
 keybind = super+'=text:\x02\x27
 keybind = super+s=text:\x02\x73
-keybind = super+one=text:\x02\x31
-keybind = super+two=text:\x02\x32
-keybind = super+three=text:\x02\x33
-keybind = super+four=text:\x02\x34
-keybind = super+five=text:\x02\x35
+keybind = super+digit_1=text:\x02\x31
+keybind = super+digit_2=text:\x02\x32
+keybind = super+digit_3=text:\x02\x33
+keybind = super+digit_4=text:\x02\x34
+keybind = super+digit_5=text:\x02\x35
